--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,13 @@ dependencies:
   firebase_storage: ^12.0.0
   image_picker: ^1.1.1
   file_picker: ^8.0.0
+  go_router: ^14.2.0  # routing
+  flutter_hooks: ^0.20.5 
 
   # UI
   cupertino_icons: ^1.0.8
+  shadcn_ui: ^0.29.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
