--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
 
   # UI
   cupertino_icons: ^1.0.8
+  shadcn_ui: ^0.29.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
