--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
 
   # UI
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+  uuid: ^4.5.1
+  shadcn_ui: ^0.29.0
+  flutter_hooks: ^0.21.3+1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
