--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   firebase_storage: ^12.0.0
   image_picker: ^1.1.1
   file_picker: ^8.0.0
+  carousel_slider: ^5.1.1 # For image slideshows
+  cached_network_image: ^3.3.1 # For efficient network image loading
+  geolocator: ^12.0.0 # For getting current location
+  geocoding: ^3.0.0 # For reverse geocoding
 
   # UI
   cupertino_icons: ^1.0.8
