--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,22 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.1
   firebase_storage: ^12.0.0
+
+  # Files & media
   image_picker: ^1.1.1
   file_picker: ^8.0.0
-  go_router: ^14.2.0  # routing
+
+  # Navigation & hooks
+  go_router: ^14.2.0
   flutter_hooks: ^0.20.5 
+
+  # Info & external links
+  package_info_plus: ^8.0.2
+  url_launcher: ^6.3.0  
 
   # UI
   cupertino_icons: ^1.0.8
   shadcn_ui: ^0.29.0
-  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
