feat(profile): Implement profile picture upload
Adds the ability for users to upload a new profile picture from their device gallery using the image_picker package...

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Nous avons besoin d'accéder à votre galerie pour que vous puissiez choisir une photo de profil.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Nous avons besoin d'accéder à votre appareil photo pour que vous puissiez prendre une nouvelle photo de profil.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Nous avons besoin d'accéder à votre micro si vous choisissez de prendre une vidéo.</string>
 </dict>
 </plist>
