--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,14 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.1
   firebase_storage: ^12.0.0
-  image_picker: ^1.1.1
+  image_picker: ^1.2.0
   file_picker: ^8.0.0
 
   # UI
   cupertino_icons: ^1.0.8
   shadcn_ui: ^0.29.0
   flutter_riverpod: ^2.6.1
+  country_picker: ^2.0.27
 
 dev_dependencies:
   flutter_test:
