--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   country_picker: ^2.0.27
   provider: ^6.1.5+1
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
