--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cached_network_image: ^3.3.1 # For efficient network image loading
   geolocator: ^12.0.0 # For getting current location
   geocoding: ^3.0.0 # For reverse geocoding
+  http: ^1.2.1
 
   # UI
   cupertino_icons: ^1.0.8
