--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shadcn_ui: ^0.29.0
   country_picker: ^2.0.27
 
+  #review
+  intl: ^0.20.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
